# streamlit_intro

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
ai_microcap_data/: performance.csv  portfolio.csv
apps/: 01_basics_app.py  02_text_example.py  03_table_example.py  04_advanced_demo.py  05_llm_trade_advisor.py  06_autotrader.py
src/: main.py
src/pages/: 1_basics_app.py  2_text_example.py  3_table_example.py  4_advanced_demo.py  5_llm_trade_advisor.py
